--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ repositories {
     maven {
         url "https://jitpack.io"
     }
+
+    maven {
+        url "https://masa.dy.fi/maven"
+    }
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -21,7 +25,8 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-    modImplementation("com.github.iDarkLightning:litebot-mod:1efc74c")
+    modImplementation "com.github.iDarkLightning:litebot-mod:1efc74c"
+    modImplementation "carpet:fabric-carpet:${project.minecraft_version}-1.4.11+v200910"
 
     // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
     // You may need to force-disable transitiveness on them.
