--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ yarn_mappings=1.16.3+build.47
 loader_version=0.11.3
 # Mod Properties
 mod_version=1.0-SNAPSHOT
-maven_group=litebot-mod-extension
-archives_base_name=litebot-mod-extension
+maven_group=cf.litetech
+archives_base_name=litetech-additions
 
