--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,11 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.3
-yarn_mappings=1.16.3+build.47
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.9
 loader_version=0.11.3
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=1.0.1-16.5-SNAPSHOT
 maven_group=cf.litetech
 archives_base_name=litetech-additions
 
