--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-    modImplementation "com.github.iDarkLightning:litebot-mod:e098ef0"
-    modImplementation "carpet:fabric-carpet:${project.minecraft_version}-1.4.36+v210512"
+    modImplementation "com.github.iDarkLightning:litebot-mod:${project.litebot_mod_commit}"
+    modImplementation "carpet:fabric-carpet:${project.minecraft_version}-${project.carpet_version}"
 
     // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
     // You may need to force-disable transitiveness on them.
