--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,10 @@ minecraft_version=1.16.5
 yarn_mappings=1.16.5+build.9
 loader_version=0.11.3
 # Mod Properties
-mod_version=1.0.4-16.5-SNAPSHOT
+mod_version=1.0.0
 maven_group=cf.litetech
 archives_base_name=litetech-additions
+# Dependency Versions
+litebot_mod_commit=e098ef0
+carpet_version=1.4.36+v210512
 
